update cards page home

--- a/ControleContatos/ControleContatos/Views/Home/Index.cshtml
+++ b/ControleContatos/ControleContatos/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
         <p> Vantagens de se cadastrar no sistema </p>
     </div>
     <div class="cards-flow">
-        <div class="card-recruter">
+        <div class="card">
             <div class="card-number">
                 1
             </div>
@@ -39,7 +39,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card-recruter">
+        <div class="card">
             <div class="card-number">
                 2
             </div>
@@ -52,7 +52,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card-recruter">
+        <div class="card">
             <div class="card-number">
                 3
             </div>
@@ -65,7 +65,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card-recruter">
+        <div class="card">
             <div class="card-number">
                 4
             </div>
@@ -79,19 +79,19 @@
         </div>
 </div>
 
-<div class="cards-flow-container-recruter">
-    <div class="cards-flow-header-recruter">
+<div class="cards-flow-container">
+    <div class="cards-flow-header">
         <h2>
             Para Recrutadores
         </h2>
         <p> Vantagens de pesquisar no sistema </p>
     </div>
-    <div class="cards-flow-recruter">
-        <div class="card-recruter">
-            <div class="card-number-recruter">
+    <div class="cards-flow">
+        <div class="card">
+            <div class="card-number">
                 1
             </div>
-            <div class="card-text-recruter">
+            <div class="card-text">
                     <h1> Acesso a uma seleção qualificada de desenvolvedores .Net </h1>
                 <ul>
                     <li>Encontre candidatos com experiência específica em .Net e tecnologias relacionadas.</li>
@@ -100,11 +100,11 @@
                 </ul>
             </div>
     </div>
-        <div class="card-recruter">
-            <div class="card-number-recruter">
+        <div class="card">
+            <div class="card-number">
                 2
             </div>
-            <div class="card-text-recruter">
+            <div class="card-text">
                     <h1> Facilidade e rapidez na busca por candidatos ideais </h1>
                 <ul>
                     <li>Refine sua pesquisa com filtros avançados para encontrar candidatos sob medida.</li>
@@ -113,11 +113,11 @@
                 </ul>
             </div>
         </div>
-        <div class="card-recruter">
-            <div class="card-number-recruter">
+        <div class="card">
+            <div class="card-number">
                 3
             </div>
-            <div class="card-text-recruter">
+            <div class="card-text">
                     <h1> Otimização do processo de recrutamento </h1>
                     <ul>
                         <li>Reduza tempo e esforço com uma plataforma centralizada para buscar talentos.</li>
@@ -126,11 +126,11 @@
                 </ul>
             </div>
         </div>
-        <div class="card-recruter">
-            <div class="card-number-recruter">
+        <div class="card">
+            <div class="card-number">
                 4
             </div>
-            <div class="card-text-recruter">
+            <div class="card-text">
                 <h1> Bora Recrutar </h1>
                 <p> Viu como é simples? Que tal começar agora mesmo? </p>
                 <a asp-controller="Contato" asp-action="Index">
